Updates to your contact info page

--- a/src/registrar/templates/application_your_contact.html
+++ b/src/registrar/templates/application_your_contact.html
@@ -2,14 +2,11 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <p>We’ll use this information to contact you about your domain request.</p>
+  <p>While reviewing your domain request, we may need to reach out with questions. We’ll also email you when we complete our review.</p>
 
-<p>If you’d like us to use a different name, email, or phone number you can make those 
-  changes below. Changing your contact information here won’t affect your Login.gov
-  account information.</p>
+<h2>What contact information should we use to reach you?</h2>
 
-  <p>The contact information you provide here won’t be public and will only be used to 
-    support your domain request.</p>
+<p>Your contact information won’t be made public and will be used only for .gov purposes. The information you provide here won't impact your Login.gov account information.</p>
 {% endblock %}
 
 
