--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -10,6 +10,9 @@
 {# the entire logged in page goes here #}
 
 <div class="tablet:grid-offset-1 desktop:grid-offset-2">
+  {% block messages %}
+    {% include "includes/form_messages.html" %}
+  {% endblock %}
   <h1>Manage your domains</h2>
 
   <p class="margin-top-4">
