Change required message on yes/no form

--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -51,7 +51,7 @@
               {{ form.DELETE }}
             {% endif %}
 
-            <div class="padding-top-1 clear-both">
+            <div class="clear-both">
               {% input_with_errors form.first_name %}
             </div>
 
