--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -124,7 +124,13 @@
         {% for application in domain_applications %}
         <tr>
           <th th scope="row" role="rowheader" data-label="Domain name">
-              {{ application.requested_domain.name|default:"New domain request" }}
+              {% if application.requested_domain is None or not application.requested_domain.is_complete %}
+                New domain request
+                <br>
+                <span class="text-base">({{ application.created_at }})</span>
+              {% else %}
+                {{ application.requested_domain.name }}
+              {% endif %}
           </th>
           <td data-sort-value="{{ application.submission_date|date:"U" }}" data-label="Date submitted">
             {% if application.submission_date %}
@@ -140,13 +146,13 @@
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
                 <use xlink:href="{%static 'img/sprite.svg'%}#edit"></use>
               </svg>
-              Edit <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request" }}</span>
+              Edit <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request ("|add:application.created_at|add:")" }}</span>
             {% else %}
               <a href="{% url 'application-status' application.pk %}">
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
                 <use xlink:href="{%static 'img/sprite.svg'%}#settings"></use>
               </svg>
-              Manage <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request" }}</span>
+              Manage <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request ("|add:application.created_at|add:")" }}</span>
             {% endif %}
             </a>
           </td>
@@ -164,7 +170,7 @@
                 <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24">
                   <use xlink:href="{%static 'img/sprite.svg'%}#delete"></use>
                 </svg>
-                Delete <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request" }}</span>
+                Delete <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request ("|add:application.created_at|add:")" }}</span>
               </a>
 
               <div
@@ -175,11 +181,7 @@
                 data-force-action
               >
                 <form method="POST" action="{% url "application-delete" pk=application.id %}">
-                  {% if application.requested_domain %}
-                    {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete "|add:application.requested_domain.name|add:"?"  modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
-                  {% else %}
-                    {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete your domain request?" modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
-                  {% endif %}
+                  {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete "|add:application.requested_domain.name|add:"?"  modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
                 </form>
               </div>
             {% endif %}
