--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -39,10 +39,7 @@
       <h2>What .gov domain do you want?</h2>
     </legend>
 
-    <p id="domain_instructions" class="margin-top-05">After you enter your domain, we’ll make sure it’s
-    available and that it meets some of our naming requirements. If your domain passes
-    these initial checks, we’ll verify that it meets all of our requirements once you
-    complete and submit the rest of this form.</p>
+    <p id="domain_instructions" class="margin-top-05">After you enter your domain, we’ll make sure it’s available and that it meets some of our naming requirements. If your domain passes these initial checks, we’ll verify that it meets all our requirements after you complete the rest of this form.</p>
 
     {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
