Add PRA burden link to application intro

--- a/src/registrar/templates/application_intro.html
+++ b/src/registrar/templates/application_intro.html
@@ -13,7 +13,7 @@
         <p>We’ll use the information you provide to verify your organization’s eligibility for a .gov domain. We’ll also verify that the domain you request meets our guidelines.</p>
         <h2>Time to complete the form</h2>
         <p>If you have <a href="{% public_site_url 'domains/before/#information-you%E2%80%99ll-need-to-complete-the-domain-request-form' %}" target="_blank" class="usa-link">all the information you need</a>,
-           completing your domain request might take around 15 minutes.</p>
+           completing your domain request might take around 15 minutes. Read our <a href="{% public_site_url 'tbd' %}" target="_blank" rel="noopener noreferrer" class="usa-link">Paperwork Reduction Act burden statement (OMB Control 1670-0049)</a>. </p>
         <p><a href="{% public_site_url 'contact/' %}" target="_blank" rel="noopener noreferrer" class="usa-link">Contact us if you need help with your request</a>.</p>
 
 {% block form_buttons %}
