--- a/src/registrar/templates/application_intro.html
+++ b/src/registrar/templates/application_intro.html
@@ -14,9 +14,10 @@
         <h2>Time to complete the form</h2>
         <p>If you have <a href="{% public_site_url 'domains/before/#information-you%E2%80%99ll-need-to-complete-the-domain-request-form' %}" target="_blank" class="usa-link">all the information you need</a>,
            completing your domain request might take around 15 minutes.</p>
+        
         <p><a href="{% public_site_url 'contact/' %}" target="_blank" rel="noopener noreferrer" class="usa-link">Contact us if you need help with your request</a>.</p>
         
-        <p>Read our <a href="{% public_site_url 'tbd' %}" target="_blank" rel="noopener noreferrer" class="usa-link">Paperwork Reduction Act statement</a> (OMB Control 1670-0049).</p>
+        <p>Read our <a href="{% public_site_url 'privacy-policy#pra' %}" target="_blank" rel="noopener noreferrer" class="usa-link">Paperwork Reduction Act statement</a> (OMB Control 1670-0049).</p>
 
 {% block form_buttons %}
         <div class="stepnav">
