Updates to requirements page

--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -10,7 +10,7 @@
 
   <h3>Commercial purposes</h3>
 
-  <p>.A .gov domain must not be used for commercial purposes, such as advertising that benefits private individuals or entities.</p>
+  <p>A .gov domain must not be used for commercial purposes, such as advertising that benefits private individuals or entities.</p>
 
   <h3>Political campaigns</h3>
 
@@ -36,7 +36,7 @@
 
   <h2>Failure to comply could result in domain suspension or termination</h2>
 
-  <p>We may need to suspend or terminate a domain registration for violations. When we discover a violation, we’ll make reasonable efforts to contact a registrant, including emails or phone calls to:
+  <p>We may need to suspend or terminate a domain registration for violations of these requirements. When we discover a violation, we’ll make reasonable efforts to contact a registrant, including emails or phone calls to:
     <ul class="usa-list"> 
       <li>Domain contacts</li>
       <li>The authorizing official</li>
@@ -50,7 +50,7 @@
   
   <p>.Gov domains are registered for a one-year period. To renew your domain, you'll be asked to verify your organization’s eligibility and your contact information. </p>
   
-  <p>Though a domain may expire, it will not be automatically put on hold or deleted. We’ll make extensive efforts to contact your organization before holding or deleting a domain.</p>
+  <p>Though a domain may expire, it will not automatically be put on hold or deleted. We’ll make extensive efforts to contact your organization before holding or deleting a domain.</p>
 
 {% endblock %}
 
