Apply suggestions from gd code review

--- a/src/registrar/templates/application_anything_else.html
+++ b/src/registrar/templates/application_anything_else.html
@@ -2,7 +2,7 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-    <h2>Is there anything else you'd like us to know about your domain request?</h2> 
+    <h2>Is there anything else you’d like us to know about your domain request?</h2> 
 
     <p>This question is optional.</p>
 {% endblock %}
