--- a/src/registrar/templates/includes/domain_example.html
+++ b/src/registrar/templates/includes/domain_example.html
@@ -67,7 +67,7 @@
 
 {% elif organization_type == 'city' %}
   <p>Most city domains must include the two-letter state abbreviation or clearly spell out the state name. Using phrases like “City of” or “Town of” is optional.</p>
-  <p>Cities that meet one of the criteria below don’t have to refer to their state in the domain name.
+  <p>Cities that meet one of the criteria below don’t have to refer to their state in their domain name.
     <ul class="usa-list">
       <li>The city name is not shared by any other U.S. city, town, village, or county. We use the <a class="usa-link usa-link--external" rel="noopener noreferrer" target="_blank" href="https://www.census.gov/geographies/reference-files/time-series/geo/gazetteer-files.html">Census Bureau’s National Places Gazetteer Files</a> to determine if names are unique.</li>
       <li>The city is so well known that it doesn’t need a state reference to communicate location. We use the list of U.S. “dateline cities” in the Associated Press Stylebook as part of our decision.</li>
