--- a/src/registrar/assets/sass/_theme/_buttons.scss
+++ b/src/registrar/assets/sass/_theme/_buttons.scss
@@ -26,25 +26,29 @@ a.usa-button {
   text-decoration: none;
 }
 
-a.usa-button.disabled-link,
-a.usa-button--unstyled.disabled-link {
+a.usa-button.disabled-link {
   background-color: #ccc !important;
   color: #454545 !important
 }
 
-a.usa-button.disabled-link:hover,
-a.usa-button--unstyled.disabled-link {
+a.usa-button.disabled-link:hover{
   background-color: #ccc !important;
   cursor: not-allowed !important;
   color: #454545 !important
 }
 
-a.usa-button.disabled-link:focus,
-a.usa-button--unstyled.disabled-link {
+a.usa-button.disabled-link:focus {
   background-color: #ccc !important;
   cursor: not-allowed !important;
   outline: none !important;
   color: #454545 !important
+}
+
+a.usa-button--unstyled.disabled-link,
+a.usa-button--unstyled.disabled-link:hover,
+a.usa-button--unstyled.disabled-link:focus {
+  cursor: not-allowed !important;
+  outline: none !important;
 }
 
 a.usa-button:not(.usa-button--unstyled, .usa-button--outline) {
