Linting and tests

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -174,7 +174,7 @@
               </a>
 
               <div
-                class="usa-modal"
+                class="usa-modal usa-modal--lg"
                 id="toggle-delete-domain-alert-{{ forloop.counter }}"
                 aria-labelledby="Are you sure you want to continue?"
                 aria-describedby="User will be removed"
