--- a/src/registrar/templates/application_withdraw_confirmation.html
+++ b/src/registrar/templates/application_withdraw_confirmation.html
@@ -10,7 +10,7 @@
 
 <h1>Withdraw request for {{ domainapplication.requested_domain.name }}?</h1>
 
-<p>If you withdraw your request we won't review it. Once you withdraw your request you can edit it and submit it again. </p>
+<p>If you withdraw your request, we won't review it. Once you withdraw your request, you can edit it and submit it again. </p>
 
 <p><a href="{% url 'application-withdrawn' domainapplication.id %}" class="usa-button withdraw">Withdraw request</a>  
   <a href="{% url 'application-status' domainapplication.id %}">Cancel</a></p>
