--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -50,7 +50,7 @@
     <button
       id="check-availability-button"
       type="button"
-      class="usa-button"
+      class="usa-button usa-button--outline"
       validate-for="{{ forms.0.requested_domain.auto_id }}"
     >Check availability</button>
   </fieldset>
@@ -83,6 +83,17 @@
       </svg><span class="margin-left-05">Add another alternative</span>
     </button>
 
-  </fieldset>
+    <br>
+
+    <button
+    id="check-availability-button"
+    type="button"
+    class="usa-button usa-button--outline"
+    validate-for="{{ forms.0.requested_domain.auto_id }}"
+    >Check availability</button>
+
+  <p>If you’re not sure this is the domain you want, that’s ok. You can change the domain later. </p>
+
+</fieldset>
 
 {% endblock %}
