--- a/src/registrar/templates/includes/modal.html
+++ b/src/registrar/templates/includes/modal.html
@@ -5,7 +5,7 @@
         <h2 class="usa-modal__heading" id="modal-1-heading">
             {{ modal_heading }}
             {% if heading_value is not None %}
-            <br>
+            <br aria-hidden="true">
             {{ heading_value }}
             {% endif %}
         </h2>
