--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -121,7 +121,8 @@
           <th th scope="row" role="rowheader" data-label="Domain name">
               {% if application.requested_domain is None %}
                 New domain request
-                <br aria-hidden="true">
+                {# Add a breakpoint #}
+                <div aria-hidden="true"></div>
                 <span class="text-base font-body-xs">({{ application.created_at }} UTC)</span>
               {% else %}
                 {{ application.requested_domain.name }}
@@ -177,17 +178,17 @@
               >
                 <form method="POST" action="{% url "application-delete" pk=application.id %}">
                   {% if application.requested_domain is None %}
-                      {% with prefix="New domain request (" %}
-                          {% if application.created_at %}
-                              {% with formatted_date=application.created_at|date:"DATETIME_FORMAT" %}
-                                  {% with modal_content=prefix|add:formatted_date|add:" UTC)" %}
-                                      {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete" heading_value="New domain request?" modal_description="This will remove "|add:modal_content|add:" from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
-                                  {% endwith %}
+                    {% if application.created_at %}
+                      {% with prefix="(created " %}
+                          {% with formatted_date=application.created_at|date:"DATETIME_FORMAT" %}
+                              {% with modal_content=prefix|add:formatted_date|add:" UTC)" %}
+                                  {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete this domain request?" modal_description="This will remove the domain request "|add:modal_content|add:" from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
                               {% endwith %}
-                          {% else %}
-                            {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete New domain request?" modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
-                          {% endif %}
-                      {% endwith %}
+                          {% endwith %}
+                        {% endwith %}
+                    {% else %}
+                      {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete New domain request?" modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
+                    {% endif %}
                   {% else %}
                       {% with modal_heading_value=application.requested_domain.name|add:"?" %}
                           {% include 'includes/modal.html' with modal_heading="Are you sure you want to delete" heading_value=modal_heading_value modal_description="This will remove the domain request from the .gov registrar. This action cannot be undone." modal_button=modal_button|safe %}
